# vim-profiler

./: .env.example  .gitignore  CHANGELOG.md  Cargo.toml  README.md  clippy.toml  justfile  rustfmt.toml
.github/workflows/: build.yaml  release.yaml
assets/: plugins.csv
crates/vim-profiler-changelog/: Cargo.toml
crates/vim-profiler-changelog/src/: main.rs
src/: arguments.rs  command.rs  common.rs  error.rs  export.rs  main.rs  opt.rs  plugin.rs  plugins.rs  printer.rs  stats.rs  utils.rs  worker.rs
