[package]
name = "vim-profiler"
version = "0.0.4"
description = "A vim profiling tool"
authors = ["Liam <liam@scalzulli.com>"]
edition = "2018"
license = "CC0-1.0"
homepage = "https://github.com/terror/vim-profiler"
repository = "https://github.com/terror/vim-profiler"
categories = ["command-line-utilities"]
keywords = ["command-line", "profiling", "vim", "utility"]
resolver = "2"

[[bin]]
name = "vp"
path = "src/main.rs"

[dependencies]
charts = "0.3.0"
csv = "1.3.1"
env_logger = "0.9.3"
log = "0.4.27"
regex = "1.11.1"
snafu = "0.6.10"
structopt = "0.3.26"

[dev-dependencies]
float-cmp = "0.9.0"
textwrap = "0.14.2"
