[package]
name = "vim-profiler"
version = "0.0.4"
description = "A vim profiling tool"
authors = ["Liam <liam@scalzulli.com>"]
edition = "2018"
license = "CC0-1.0"
homepage = "https://github.com/terror/vim-profiler"
repository = "https://github.com/terror/vim-profiler"
categories = ["command-line-utilities"]
keywords = ["command-line", "profiling", "vim", "utility"]
resolver = "2"

[[bin]]
name = "vp"
path = "src/main.rs"

[lints]
workspace = true

[profile.release]
codegen-units = 1
lto = true

[workspace]
members = [".", "crates/*"]

[workspace.lints.rust]
mismatched_lifetime_syntaxes = "allow"
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(fuzzing)'] }

[workspace.lints.clippy]
all = { level = "deny", priority = -1 }
arbitrary-source-item-ordering = "deny"
enum_glob_use = "allow"
ignore_without_reason = "allow"
needless_pass_by_value = "allow"
pedantic = { level = "deny", priority = -1 }
similar_names = "allow"
struct_excessive_bools = "allow"
struct_field_names = "allow"
too_many_arguments = "allow"
too_many_lines = "allow"
type_complexity = "allow"
undocumented_unsafe_blocks = "deny"
unnecessary_wraps = "allow"
wildcard_imports = "allow"

[dependencies]
charts = "0.3.0"
num-traits = "0.2"
clap = { version = "4.5.54", features = ["derive"] }
csv = "1.3.1"
env_logger = "0.9.3"
log = "0.4.27"
regex = "1.11.1"
snafu = "0.6.10"

[dev-dependencies]
float-cmp = "0.9.0"
textwrap = "0.14.2"
